# LearnVulkan

./: .gitattributes  AGENTS.md  CMakeLists.txt  README.md
archives/01-vulkan-instance/: CMakeLists.txt  README.md
archives/01-vulkan-instance/src/: main.cpp
archives/02-validation-layers/: CMakeLists.txt  README.md
archives/02-validation-layers/src/: main.cpp
archives/03-window-surface/: CMakeLists.txt  README.md
archives/03-window-surface/src/: main.cpp
archives/04-logical-device-queues/: CMakeLists.txt  README.md
archives/04-logical-device-queues/src/: main.cpp
archives/05-swapchain/: CMakeLists.txt  README.md
archives/05-swapchain/src/: main.cpp
archives/06-image-view-render-pass/: CMakeLists.txt  README.md
archives/06-image-view-render-pass/src/: main.cpp
archives/07-graphics-pipeline/: CMakeLists.txt  README.md
archives/07-graphics-pipeline/shaders/: triangle.frag  triangle.frag.spv  triangle.vert
archives/07-graphics-pipeline/src/: main.cpp
archives/08-framebuffer-command-buffer/: CMakeLists.txt  README.md
archives/08-framebuffer-command-buffer/shaders/: triangle.vert
archives/08-framebuffer-command-buffer/src/: main.cpp
archives/09-sync-render-loop/: CMakeLists.txt  README.md
archives/09-sync-render-loop/shaders/: triangle.vert
archives/09-sync-render-loop/src/: main.cpp
archives/10-vertex-buffer-triangle/: CMakeLists.txt  README.md
archives/10-vertex-buffer-triangle/shaders/: triangle.vert
archives/10-vertex-buffer-triangle/src/: main.cpp
archives/11-staging-index-buffer/: CMakeLists.txt  README.md
archives/11-staging-index-buffer/shaders/: triangle.frag  triangle.vert
archives/11-staging-index-buffer/src/: main.cpp
archives/12-uniform-buffer-descriptors/: CMakeLists.txt  README.md
archives/12-uniform-buffer-descriptors/shaders/: triangle.vert  triangle.vert.spv
archives/12-uniform-buffer-descriptors/src/: main.cpp
archives/13-texture/: CMakeLists.txt  README.md
archives/13-texture/src/: main.cpp
archives/14-depth-buffer/: CMakeLists.txt  README.md
archives/14-depth-buffer/assets/: checker.ppm
archives/14-depth-buffer/shaders/: triangle.vert
archives/14-depth-buffer/src/: main.cpp
archives/15-model-loading/: CMakeLists.txt  README.md
archives/15-model-loading/shaders/: triangle.frag  triangle.frag.spv
archives/15-model-loading/src/: main.cpp
archives/16-review-refactor/: CMakeLists.txt  README.md  REVIEW.md
archives/16-review-refactor/shaders/: triangle.vert.spv
archives/16-review-refactor/src/: main.cpp
src/: main.cpp
